registry/registry-auth-middleware.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: registry-auth

spec:
  basicAuth:
    secret: registry-basic-auth
